# tensorboardX

./: .codecov.yml  .flake8  .gitignore  .readthedocs.yaml  .travis.yml  AI_tool.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  beholder_demo.py  check_proto_output.py  compile.sh  compile_protos.sh  demo.py  demo_caffe2.py  demo_embedding.py  demo_graph.py  demo_multiple_embedding.py  demo_rnn.py  issue166.py  issue174.py  issue191.py  issue215.py  issue217.py  issue223.py  issue229.py  issue256.py  issue268.py  issue293.py  issue295.py  issue297.py  issue85.py  onnx_graph.py  pyproject.toml  repro_749.py  run_pytest.sh  setup.cfg  setup.py  (+2 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-requests-or-general-questions.md
.github/workflows/: build-pip.yml  build-wheel.yml  publish-pypi.yml  python-app.yml  test-matrix.yml
docs/: Makefile  conf.py  index.rst  requirements.txt  tensorboard.rst  tutorial.rst  tutorial_zh.rst  utils.rst
examples/: create_wit_samples.py  demo.py  demo_beholder.py  demo_caffe2.py  demo_comet.py  demo_custom_scalars.py  demo_embedding.py  demo_global_writer.py  demo_graph.py  demo_hogwild.py  demo_hparams.py  demo_image.py  demo_matplotlib.py  demo_mesh.py  demo_multiple_embedding.py  demo_multiprocessing.py  demo_nvidia_smi.py  demo_onnx.py  demo_openvino.py  demo_purge.py  global_1.py  global_2.py  matplotlib_demo.py  mobilenetv2.xml  tensorboardX
examples/chainer/: net.py  train_vae.py
examples/chainer/extension_logger/: net.py  train_dcgan.py  updater.py  visualize.py  writetensorboard.py  writetnesorboard.py
examples/chainer/plain_logger/: train_vae.py
proto_src/: event.proto  summary.proto
tensorboard/: embedding.py  graph.py  summary.py  writer.py  x2num.py
tensorboard/src/: attr_value_pb2.py  graph.proto  graph_pb2.py  node_def_pb2.py  resource_handle_pb2.py  summary_pb2.py  tensor.proto  tensor_pb2.py  tensor_shape_pb2.py
tensorboard/src/proto_src/: event_pb2.py  summary_pb2.py
tensorboardX/: __init__.py  caffe2_graph.py  comet_utils.py  crc32c.py  embedding.py  event_file_writer.py  global_writer.py  graph.py  graph_onnx.py  onnx_graph.py  openvino_graph.py  proto_graph.py  pytorch_graph.py  reader.py  record_reader.py  record_writer.py  summary.py  torchvis.py  utils.py  visdom_writer.py  writer.py  x2num.py
tensorboardX/beholder/: beholder.py  file_system_tools.py  im_util.py  video_writing.py  visualizer.py
tensorboardX/proto/: __init__.py  api.proto  api_pb2.py  attr_value.proto  attr_value_pb2.py  event.proto  event_pb2.py  graph.proto  graph_pb2.py  layout_pb2.py  node_def.proto  node_def_pb2.py  plugin_hparams.proto  plugin_hparams_pb2.py  plugin_mesh.proto  plugin_mesh_pb2.py  plugin_pr_curve.proto  plugin_pr_curve_pb2.py  plugin_text.proto  plugin_text_pb2.py  resource_handle.proto  resource_handle_pb2.py  step_stats_pb2.py  summary.proto  summary_pb2.py  tensor.proto  tensor_pb2.py  tensor_shape.proto  tensor_shape_pb2.py  types.proto  types_pb2.py  versions.proto  versions_pb2.py
tensorboardX/src/: attr_value.proto  attr_value_pb2.py  event.proto  event_pb2.py  graph.proto  graph_pb2.py  layout.proto  layout_pb2.py  node_def.proto  node_def_pb2.py  onnx_pb2.py  plugin_pr_curve_pb2.py  plugin_text.proto  plugin_text_pb2.py  resource_handle_pb2.py  step_stats.proto  step_stats_pb2.py  summary.proto  summary_pb2.py  tensor.proto  tensor_pb2.py  tensor_shape_pb2.py  types_pb2.py  versions_pb2.py
tests/: __init__.py  event_file_writer_test.py  expect_reader.py  record_reader_test.py  record_writer_test.py  test_beholder.py  test_caffe2.py  test_chainer_np.py  test_crc32c.py  test_embedding.py  test_figure.py  test_hparams.py  test_issue_727.py  test_lint.py  test_multiprocess_write.py  test_numpy.py  test_onnx_graph.py  test_openvino_graph.py  test_pr_curve.py  test_pytorch_graph.py  test_pytorch_np.py  test_record_writer.py  test_summary.py  test_summary_reader.py  test_summary_writer.py  test_test.py  test_utils.py  test_utils_coverage.py  test_visdom.py  test_writer.py  test_x2num_coverage.py
tests/expect/: test_pr_curve.test_pr_purve.expect  test_pr_curve.test_pr_purve_raw.expect  test_summary.test_audio.expect  test_summary.test_float32_image.expect  test_summary.test_histogram_doane.expect  test_summary.test_histogram_fd.expect  test_summary.test_hparams.expect  test_summary.test_hparams_bool.expect  test_summary.test_image_with_3_channel_batched.expect  test_summary.test_image_with_boxes.expect  test_summary.test_image_with_four_channel.expect  test_summary.test_image_with_four_channel_batched.expect  test_summary.test_image_with_one_channel_batched.expect  test_summary.test_image_without_channel.expect  test_summary.test_mesh.expect  test_summary.test_uint8_image.expect  test_summary.test_video.expect
