[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorboardX"
dynamic = ["version", "readme"]
description = "TensorBoardX lets you watch Tensors Flow without Tensorflow"
requires-python = ">=3.9"
license ="MIT"
authors = [
    {name = "Tzu-Wei Huang", email = "huang.dexter@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "packaging",
    "protobuf>=3.20",
]

[project.urls]
Homepage = "https://github.com/lanpa/tensorboardX"
Repository = "https://github.com/lanpa/tensorboardX.git"

[tool.setuptools]
include-package-data = true
packages = ["tensorboardX"]
zip-safe = false

[tool.setuptools.dynamic]
readme = {file = ["HISTORY.rst"]}

[tool.setuptools_scm]
version_file = "tensorboardX/_version.py"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "protobuf==4.22.3",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "numpy>=2.0.2",
    "tensorboard>=2.18.0",
    "boto3>=1.35.81",
    "matplotlib>=3.9.4",
    "moto<5",
    "soundfile>=0.12.1",
    "visdom>=0.2.4",
    "onnx>=1.17.0",
    "imageio==2.27",
    "ruff>=0.8.4",
    "pillow==11.0.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "proto",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
#    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["F401", "E501", "E721", "E741"]

